<?xml version="1.0"?>
<package format="2">
  <name>toc_execution</name>
  <version>0.0.1</version>
  <description>A decision-making framework that enables a robot to transfer control to a human.</description>

  <maintainer email="zhuojason1@gmail.com">Jason Zhuo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>